# gbm_perturb

./: .Rprofile  .gitignore  .renvignore  README.md  deseq.R  pyproject.toml  workflow.md
R/: analyze_nmf_RT.R  degenes.R  deseq.R  deseq_sb28.R  nmf.R  run_nmf_RT.R  utils.R
R/exploration/: degene_plots.Rmd  fgsea_ensembl_ontology_list.rds  gbm43_exploration_from_cellranger.R  gbm43_exploration_from_seurat.R  gbm_pdx_perturb_gbm43.R  gl261_downsampling.Rmd  gl261_export.Rmd  gl261_gsea.Rmd  gl261_lda_only.Rmd  gl261_lda_only_ced.R  gl261_lda_only_preinf.R  gl261_mixscape_lda.Rmd  gl261_modeling.Rmd  gsea.R  gsea.Rmd  heterogeneity.R  heterogeneity.Rmd  patient_tumors.Rmd  ranked_list.rnk  ranked_list.txt  sb28_control_exploration.R  sb28_control_exploration.Rmd
R/malignant/: .nfs000000080055c1510003d915  degene_counts.R  degene_counts.Rmd  degenes.R  deseq.R  downsample.R  downsample_correlations.R  gsea.R  lda.R  lda.Rmd  mixscape.R  nmf_full_RT.R  nmf_full_noRT.R  preprocess_malignant.R  preprocess_malignant_separated.R
R/malignantOnly/: deseq.R  nmf_RT.R  nmf_full_RT.R
R/microenvironment/: deseq.R  deseq_microenvironment.R  gsea.R  gsea.Rmd  gsea_microenvironment.Rmd  interactions_micro_sb28_3.R  nmf_microenvironment.R  nmf_microenvironment.Rmd  nmf_microenvironment_combined.R  nmf_microenvironment_prkdc_excluded.R  nmf_microenvironment_prkdc_included.R  preprocess_micro_sb28_3.R  (+4 more)
cinema_ot/: gl261_cinemaot.ipynb  requirements.txt
python/: chromatin_analysis.ipynb  cinema_ot_analysis.ipynb  doubles_coefficient_analysis.ipynb  gl261_cinemaot.ipynb
(+277 files in other folders)
