[tool.poetry]
name = "genome-biology-methods"
version = "0.1.0"
description = ""
authors = ["Christopher <cwzou@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scikit-learn = "^1.5.0"
numpy = "1.26.4"
scipy = "^1.14.0"
pandas = "^2.2.2"
scanpy = "^1.10.1"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
dcor = "^0.6"
adjusttext = "^1.1.1"
pyturbseq = "^0.0.13"
upsetplot = "^0.9.0"
scrublet = "^0.2.3"
umap-learn = "^0.5.6"
cinemaot = "^0.0.5"
gseapy = "^1.1.3"
plotly = "^5.22.0"
pybiomart = "^0.2.0"
pybedtools = "^0.10.0"
mygene = "^3.2.2"
deeptools = "^3.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
